force-app/main/default/objects/Access_Management_Settings__c/Access_Management_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stores runtime configurations for Persona Access Framework.</description>
    <label>Access Management Settings</label>
</CustomObject>