force-app/main/default/objects/Access_Management_Settings__c/fields/Default_Persona__c.field-meta.xml
<CustomField>
    <fullName>Default_Persona__c</fullName>
    <description>Fallback Persona if none is assigned.</description>
    <label>Default Persona</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>