force-app/main/default/objects/Access_Management_Settings__c/fields/Enable_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Enable_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Toggle trigger execution for Persona Access Framework based triggers</description>
    <label>Enable Trigger</label>
    <type>Checkbox</type>
</CustomField>