force-app/main/default/objects/Access_Management_Settings__c/fields/Error_Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>Error_Notification_Email__c</fullName>
    <description>Email for alerts regarding Persona Access Management trigger framework based errors</description>
    <label>Error Notification Email</label>
    <type>Email</type>
</CustomField>